# deform-neighbourhood-sampling

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.py
deform_neighbourhood_sampling/: ops.py
deform_neighbourhood_sampling/csrc/: deform_nbrhd.cpp  deform_nbrhd.h
deform_neighbourhood_sampling/csrc/cpu/: deform_nbrhd_kernel.cpp
deform_neighbourhood_sampling/csrc/cuda/: deform_nbrhd_kernel.cu
tests/: test_extension.py
