[project]
name = "deform-neighbourhood-sampling"
version = "0.0.1"
authors = [
    {name = "Marco Sánchez Beeckman", email = "marco.sanchez@uib.es"}
]
description = "A torch custom operator for deformable neighbourhood sampling"
readme = "README.md"

requires-python = ">= 3.12"
dependencies = [
    "torch>=2.4",
    "numpy<2.0"
]

[project.optional-dependencies]
cli = [
    "expecttest"
]


[build-system]
requires = [
    "setuptools",
    "torch",
]
build-backend = "setuptools.build_meta"
