[project]
name = "deform-neighbourhood-sampling"
version = "0.1.1"
authors = [
    {name = "Marco Sánchez Beeckman", email = "marco.sanchez@uib.es"}
]
description = "A torch custom operator for deformable neighbourhood sampling"
readme = "README.md"

requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.6.0,<2.7.0"
]

[project.optional-dependencies]
cli = [
    "expecttest"
]


[build-system]
requires = [
    "setuptools",
    "torch>=2.6.0,<2.7.0",
]
build-backend = "setuptools.build_meta"
